// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snake advances and grows when didEatFoodIsTrue 1`] = `
Array [
  Object {
    "x": 13,
    "y": 10,
  },
  Object {
    "x": 12,
    "y": 10,
  },
  Object {
    "x": 11,
    "y": 10,
  },
  Object {
    "x": 10,
    "y": 10,
  },
  Object {
    "x": 9,
    "y": 10,
  },
]
`;

exports[`Snake advances in response to negative horizontalVelocity 1`] = `
Array [
  Object {
    "x": 11,
    "y": 9,
  },
  Object {
    "x": 12,
    "y": 9,
  },
  Object {
    "x": 11,
    "y": 10,
  },
  Object {
    "x": 10,
    "y": 10,
  },
]
`;

exports[`Snake advances in response to negative verticalVelocity 1`] = `
Array [
  Object {
    "x": 12,
    "y": 9,
  },
  Object {
    "x": 12,
    "y": 10,
  },
  Object {
    "x": 11,
    "y": 10,
  },
  Object {
    "x": 10,
    "y": 10,
  },
]
`;

exports[`Snake advances in response to positive horizontalVelocity 1`] = `
Array [
  Object {
    "x": 13,
    "y": 10,
  },
  Object {
    "x": 12,
    "y": 10,
  },
  Object {
    "x": 11,
    "y": 10,
  },
  Object {
    "x": 10,
    "y": 10,
  },
]
`;

exports[`Snake advances in response to positive verticalVelocity 1`] = `
Array [
  Object {
    "x": 12,
    "y": 11,
  },
  Object {
    "x": 12,
    "y": 10,
  },
  Object {
    "x": 11,
    "y": 10,
  },
  Object {
    "x": 10,
    "y": 10,
  },
]
`;
